@@ -1,3 +1,8 @@
+2011-08-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/main.cpp:
+	- set "C" to the global locale.
+
 2011-05-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* NEWS:
